# weather

./: .clang-format  .clang-tidy  .cmake-format.py  .cmakelintrc  CMakeLists.txt
source/: main.c
